gap fixes

--- a/ui/frontend/src/index.css
+++ b/ui/frontend/src/index.css
@@ -8,7 +8,7 @@ body {
   scrollbar-width: none;
 }
 
-body::-webkit-scrollbar {
+::-webkit-scrollbar {
   width: 0;
   height: 0;
 }
